In Progress - Sales 360

--- a/displaytabs/AccountingUI-MainTemplate.html
+++ b/displaytabs/AccountingUI-MainTemplate.html
@@ -11,17 +11,36 @@
                         <a href="#Dashboard" data-toggle="tab" aria-expanded="true">Dashboard</a>
                     </li>
                     <li class="tab-pane">
-                        <a href="#AccountChart" data-toggle="tab" aria-expanded="false">Account Chart</a>
-                    </li> 
+                        <a href="#Sales" data-toggle="tab" aria-expanded="false">Sales</a>
+                    </li>
                     <li class="tab-pane">
-                        <a href="#PurchaseOrder" data-toggle="tab" aria-expanded="false">Purchase Order</a>
+                        <a href="#Purchases" data-toggle="tab" aria-expanded="false">Purchases</a>
                     </li>
                     <li class="tab-pane">
                         <a href="#Payroll" data-toggle="tab" aria-expanded="false">Payroll</a>
                     </li>
+                    <li class="tab-pane">
+                        <a href="#Transactions" data-toggle="tab" aria-expanded="false">Transactions</a>
+                    </li>
+                    <li class="tab-pane">
+                        <a href="#Reconcillation" data-toggle="tab" aria-expanded="false">Reconcillation</a>
+                    </li>
+                    <li class="tab-pane">
+                        <a href="#AccountChart" data-toggle="tab" aria-expanded="false">Account Chart</a>
+                    </li> 
                 </ul>
                 <div class="tab-content no-padding">
                     <div class="tab-pane active" id="Dashboard">
+                    </div>
+                    <div class="tab-pane" id="Sales">
+                    </div>
+                    <div class="tab-pane" id="Purchases">
+                    </div>
+                    <div class="tab-pane" id="Payroll">
+                    </div>
+                    <div class="tab-pane" id="Transactions">
+                    </div>
+                    <div class="tab-pane" id="Reconcillation">
                     </div>
                     <div class="tab-pane" id="AccountChart">
                         <div style="display: flex; background: #ecf0f5;">
@@ -33,10 +52,6 @@
                                 <div class="DisplayTabCommon" tabName="AcctAccountChart" tabUrl="SearchAccountChart"></div>
                             </div>
                         </div>
-                    </div>
-                    <div class="tab-pane" id="PurchaseOrder">
-                    </div>
-                    <div class="tab-pane" id="Payroll">
                     </div>
                 </div>
             </div>
