In Progress - Sales 360

--- a/displaytabs/tabs/HrRequisitionUI/ApplicantProfile.html
+++ b/displaytabs/tabs/HrRequisitionUI/ApplicantProfile.html
@@ -2,8 +2,8 @@
 
 <div class="box box-default">
     <div class="box-body box-profile">
-        <img class="profile-user-img img-responsive img-circle profilePic HrRequisitionUI_Applicants_ApplicantPic" 
-            name="profilePic" module="HrApplicantUI" alt="User profile picture" style="display: none;">
+        <img class="quickAttachmentTarget profile-user-img img-responsive img-circle profilePic HrRequisitionUI_Applicants_ApplicantPic" 
+            name="profilePic" module="HrApplicantUI" recordId="" fileType="Profile" tabName="_TABNAME_" alt="Applicant profile picture" style="display: none;">
 
         <h3 class="profile-username text-center HrRequisitionUI_Applicants_ApplicantName">--</h3>
 
