--- a/displaytabs/tabs/common/EmployeeProfile.html
+++ b/displaytabs/tabs/common/EmployeeProfile.html
@@ -2,9 +2,9 @@
 
 <div class="box box-default">
     <div class="box-body box-profile">
-        <img class="profile-user-img img-responsive img-circle profilePic EmployeeUI_ProfilePic" 
-            name="profilePic" module="EmployeeUI" tabName="_TABNAME_" alt="User profile picture" style="display: none;">
-
+        <img class="quickAttachmentTarget profile-user-img img-responsive img-circle profilePic EmployeeUI_ProfilePic" 
+            name="profilePic" module="EmployeeUI" recordId="" fileType="Profile" tabName="_TABNAME_" alt="User profile picture" style="display: none;">
+ 
         <h3 class="profile-username text-center EmployeeUI_EmployeeName" tabName="_TABNAME_">--</h3>
 
         <p class="text-muted text-center EmployeeUI_Employee_Job" tabName="_TABNAME_">--</p>
