--- a/displaytabs/EmployeeUI-MainTemplate.html
+++ b/displaytabs/EmployeeUI-MainTemplate.html
@@ -13,9 +13,9 @@
                     <li class="tab-pane">
                         <a href="#Profile" data-toggle="tab" aria-expanded="false">Profile</a>
                     </li>
-                    <li class="tab-pane">
+                    <!-- <li class="tab-pane">
                         <a href="#Finance" data-toggle="tab" aria-expanded="false">Finance</a>
-                    </li>
+                    </li> -->
                     <!-- <li class="tab-pane">
                         <a href="#Performance" data-toggle="tab" aria-expanded="false">Performance</a>
                     </li> -->
