In Progress - SalesOrder 360

--- a/displaytabs/tabs/common/SearchSalesEstimates.html
+++ b/displaytabs/tabs/common/SearchSalesEstimates.html
@@ -8,10 +8,10 @@
     </div>
     <div class="box-body">
         <div class="form-group">
-            <input type="text" class="form-control searchJobFilter" module="HrRequisitionUI" tabName="_TABNAME_" placeholder="Search Job">
+            <input type="text" class="form-control searchEstimateFilter" module="SalesOrderUI" tabName="_TABNAME_" placeholder="Search Job">
         </div>
     </div>
 
-    <div class="box-body HrRequisitionUI_SearchJobs" module="HrRequisitionUI" tabName="_TABNAME_" style="max-height: 500px; overflow-y: auto;">
+    <div class="box-body searchEstimates" module="SalesOrderUI" tabName="_TABNAME_" style="max-height: 500px; overflow-y: auto;">
     </div>
 </div>
