--- a/home.html
+++ b/home.html
@@ -399,6 +399,7 @@
   <script src="js/main-initializer.js"></script>
   <script src="js/global-events-others.js"></script>
   <script src="js/global-events-hr.js"></script>
+  <script src="js/global-events-accounting.js"></script>
   <script src="js/global-events-government.js"></script>
   <script src="js/global-events.js"></script>
   <script src="js/mainJS.js"></script>
