--- a/displaytabs/tabs/common/SalesEstimateProfile.html
+++ b/displaytabs/tabs/common/SalesEstimateProfile.html
@@ -4,41 +4,41 @@
     <div class="box-header with-border">
         <h3 class="box-title">Estimate</h3>
         <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
-            <button type="button" class="btn btn-default pull-right CommunityTaxCertificateUI_btnNewCommunityTaxCertificate"><i class="fa fa-plus"></i> New CTC</button>
+            <button type="button" class="btn btn-default pull-right SalesOrderUI_btnNewSalesOrder"><i class="fa fa-plus"></i> New Estimate</button>
         </div>
     </div>
     <!-- /.box-header -->
-    <div class="box-body">
+    <div class="box-body"> 
         <form role="form">
-            <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="CommunityTaxCertificateId" disabled="">
+            <input type="text" class="form-control editEstimate" module="SalesOrderUI" name="SalesOrderId" disabled="">
             <div style="display: flex; flex-wrap: wrap;">
                 <div class="form-group" style="flex: 18%; margin-left: 15px;">
                     <label>CTC Number</label>
-                    <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="ctcNumber" disabled="">
+                    <input type="text" class="form-control editEstimate" module="SalesOrderUI" name="ctcNumber" disabled="">
                 </div>
                 <div class="form-group" style="flex: 18%; margin-left: 15px;">
                     <label>Invoiced Number</label>
-                    <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="invoiceNumber" disabled="">
+                    <input type="text" class="form-control editEstimate" module="SalesOrderUI" name="invoiceNumber" disabled="">
                 </div>
                 <div class="form-group" style="flex: 18%; margin-left: 15px;">
                     <label>Issuer</label>
                     <div>
-                        <input type="text" class="form-control autocomplete displayEdit editCtc" name="issuerCode" placeholder="Issuer" module="CommunityTaxCertificateUI" mainmodule="CommunityTaxCertificateUI" autoname="issuerCode" helptitle="issuerCode" disabled="">
-                        <input class="form-control HiddenAutoComplete" name="issuerCode" type="hidden" module="CommunityTaxCertificateUI" mainmodule="CommunityTaxCertificateUI" autonamefield="issuerCode" value="">
-                        <div class="autocomplete-items" module="CommunityTaxCertificateUI" mainmodule="CommunityTaxCertificateUI" autoname="issuerCode">
+                        <input type="text" class="form-control autocomplete displayEdit editEstimate" name="issuerCode" placeholder="Issuer" module="SalesOrderUI" mainmodule="SalesOrderUI" autoname="issuerCode" helptitle="issuerCode" disabled="">
+                        <input class="form-control HiddenAutoComplete" name="issuerCode" type="hidden" module="SalesOrderUI" mainmodule="SalesOrderUI" autonamefield="issuerCode" value="">
+                        <div class="autocomplete-items" module="SalesOrderUI" mainmodule="SalesOrderUI" autoname="issuerCode">
                         </div>
                     </div>
                 </div>
                 <div class="form-group" style="flex: 18%; margin-left: 15px;">
                     <label>Date</label>
-                    <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="ctcDate" disabled="">
+                    <input type="text" class="form-control editEstimate" module="SalesOrderUI" name="ctcDate" disabled="">
                 </div>
 
                 <div style="flex: 100%; display: flex;">
                     <div style="flex: 1; display: flex; flex-direction: column;">
                         <div class="form-group" style="margin-left: 15px;">
                             <label>Purpose</label>
-                            <select class="form-control editCtc" module="CommunityTaxCertificateUI" name="ctcPurpose">
+                            <select class="form-control editEstimate" module="SalesOrderUI" name="ctcPurpose">
                                 <option value="Identification Card">Identification Card</option>
                                 <option value="Notary Public Document">Notary Public Document</option>
                                 <option value="Government Employee">Government Employee</option>
@@ -51,33 +51,33 @@
                         </div>
                         <div class="form-group" style="margin-left: 15px;">
                             <label>Citizen</label>
-                            <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="citizen" placeholder="Enter ...">
+                            <input type="text" class="form-control editEstimate" module="SalesOrderUI" name="citizen" placeholder="Enter ...">
                         </div>
                         <div class="form-group" style="margin-left: 15px;">
                             <label>Address</label>
-                            <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="address" placeholder="Enter ...">
+                            <input type="text" class="form-control editEstimate" module="SalesOrderUI" name="address" placeholder="Enter ...">
                         </div>
                     </div>
                     <div style="flex: 1; display: flex; flex-direction: column;">
                         <div class="form-group" style="margin-left: 15px;">
                             <label>Amount A</label>
-                            <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="amountA" placeholder="Enter ...">
+                            <input type="text" class="form-control editEstimate" module="SalesOrderUI" name="amountA" placeholder="Enter ...">
                         </div>
                         <div class="form-group" style="margin-left: 15px;">
                             <label>Amount B1</label>
-                            <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="amountB1" placeholder="Enter ..."">
+                            <input type="text" class="form-control editEstimate" module="SalesOrderUI" name="amountB1" placeholder="Enter ..."">
                         </div>
                         <div class=" form-group" style="margin-left: 15px;">
                             <label>Amount B2</label>
-                            <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="amountB2" placeholder="Enter ...">
+                            <input type="text" class="form-control editEstimate" module="SalesOrderUI" name="amountB2" placeholder="Enter ...">
                         </div>
                         <div class="form-group" style="margin-left: 15px;">
                             <label>Amount B3</label>
-                            <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="amountB3" placeholder="Enter ...">
+                            <input type="text" class="form-control editEstimate" module="SalesOrderUI" name="amountB3" placeholder="Enter ...">
                         </div>
                         <div class="form-group" style="margin-left: 15px;">
                             <label>Total Amount</label>
-                            <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="totalAmount" disabled="">
+                            <input type="text" class="form-control editEstimate" module="SalesOrderUI" name="totalAmount" disabled="">
                         </div>
                     </div>
                 </div>
@@ -87,6 +87,6 @@
     <!-- /.box-body -->
     <div class="box-footer">
         <button type="button" class="btn btn-default">Cancel</button>
-        <button type="button" class="btn btn-info pull-right btnSaveCTCForCashier">Save and Submit to Cashier</button>
+        <button type="button" class="btn btn-info pull-right btnSaveSalesOrder">Save Estimate</button>
     </div>
 </div>
