In Progress - Sales 360

--- a/displaytabs/tabs/HrRequisitionUI/Header.html
+++ b/displaytabs/tabs/HrRequisitionUI/Header.html
@@ -3,8 +3,12 @@
 <h1>
     Recruitment 360
 </h1>
-<br/>
-<div class="row" style="display: flex;">
+<ol class="breadcrumb">
+    <li>
+        <a href="#" class="pull-right btn-box-tool toggle-box" toggletarget=".HrRequisitionUI_Header">Toggle</a>
+    </li>
+</ol>
+<div class="row HrRequisitionUI_Header" style="display: flex; margin-top: 15px;">
     <div style="flex: 1; margin: 0 15px;">
         <div class="info-box">
             <span class="info-box-icon bg-aqua"><i class="fa fa-fw fa-user"></i></span>
