--- a/displaytabs/tabs/PayrollScheduleUI/Header.html
+++ b/displaytabs/tabs/PayrollScheduleUI/Header.html
@@ -3,11 +3,10 @@
 <h1>
     Payroll 360 <small><span class="chosenYearAndMonth" style="color: blue;"></span></small>
 </h1>
-
 <ol class="breadcrumb">
     <li style="display: none;"><a href="#" class="btnToggleSearch" module="PayrollScheduleUI"><i class="fa fa-search"> Search</i></a></li>
     <li style="display: none;"><a href="#" class="btnQuickSearch" module="PayrollScheduleUI" data-original-title="" title=""><i class="fa fa-search"> Search</i></a></li>
-    <a href="#" class="pull-right btn-box-tool toggle-box" toggleTarget=".PayrollScheduleUI-YearAndMonthList">Toggle Year And Month</a>
+    <a href="#" class="pull-right btn-box-tool toggle-box" toggleTarget=".PayrollScheduleUI-YearAndMonthList">Toggle</a>
 </ol>
 <br/>
 <div class="box box-default PayrollScheduleUI-YearAndMonthList" style="margin-bottom: 0px;">
