In Progress - Government 360

--- a/displaytabs/GovernmentUI-MainTemplate.html
+++ b/displaytabs/GovernmentUI-MainTemplate.html
@@ -11,7 +11,22 @@
                         <a href="#RealEstate" data-toggle="tab" aria-expanded="true">Real Estate</a>
                     </li>
                     <li class="tab-pane">
-                        <a href="#CommunityTaxCertificate" data-toggle="tab" aria-expanded="false">Community Tax Certificate</a>
+                        <a href="#RealEstateTax" data-toggle="tab" aria-expanded="false">Real Estate Tax</a>
+                    </li>
+                    <li class="tab-pane">
+                        <a href="#BuildingPermit" data-toggle="tab" aria-expanded="false">Building Permit</a>
+                    </li>
+                    <li class="tab-pane">
+                        <a href="#ElectricalPermit" data-toggle="tab" aria-expanded="false">Electrical Permit</a>
+                    </li>
+                    <li class="tab-pane">
+                        <a href="#PlumbingPermit" data-toggle="tab" aria-expanded="false">Plumbing Permit</a>
+                    </li>
+                    <li class="tab-pane">
+                        <a href="#TransferTax" data-toggle="tab" aria-expanded="false">Transfer Tax</a>
+                    </li>
+                    <li class="tab-pane">
+                        <a href="#CommunityTaxCertificate" data-toggle="tab" aria-expanded="false">Community Tax</a>
                     </li>
                     <li class="tab-pane">
                         <a href="#BusinessPermit" data-toggle="tab" aria-expanded="false">Business Permit</a>
@@ -72,6 +87,56 @@
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
                                 <div class="DisplayTabCommon" tabName="dashboard" tabUrl="SearchRealEstate"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane" id="RealEstateTax">
+                        <div style="display: flex; background: #ecf0f5;">
+                            <div style="flex: 75%; margin: 15px 0px;">
+                                <div class="DisplayTabCommon" tabName="RealEstateTax" tabUrl="RealEstateTaxProfile"></div>
+                            </div>
+                            <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTabCommon" tabName="RealEstateTax" tabUrl="SearchRealEstateTax"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane" id="BuildingPermit">
+                        <div style="display: flex; background: #ecf0f5;">
+                            <div style="flex: 75%; margin: 15px 0px;">
+                                <div class="DisplayTabCommon" tabName="BuildingPermit" tabUrl="BuildingPermitProfile"></div>
+                            </div>
+                            <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTabCommon" tabName="BuildingPermit" tabUrl="SearchBuildingPermit"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane" id="ElectricalPermit">
+                        <div style="display: flex; background: #ecf0f5;">
+                            <div style="flex: 75%; margin: 15px 0px;">
+                                <div class="DisplayTabCommon" tabName="ElectricalPermit" tabUrl="ElectricalPermitProfile"></div>
+                            </div>
+                            <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTabCommon" tabName="ElectricalPermit" tabUrl="SearchElectricalPermit"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane" id="PlumbingPermit">
+                        <div style="display: flex; background: #ecf0f5;">
+                            <div style="flex: 75%; margin: 15px 0px;">
+                                <div class="DisplayTabCommon" tabName="PlumbingPermit" tabUrl="PlumbingPermitProfile"></div>
+                            </div>
+                            <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTabCommon" tabName="PlumbingPermit" tabUrl="SearchPlumbingPermit"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane" id="TransferTax">
+                        <div style="display: flex; background: #ecf0f5;">
+                            <div style="flex: 75%; margin: 15px 0px;">
+                                <div class="DisplayTabCommon" tabName="TransferTax" tabUrl="TransferTaxProfile"></div>
+                            </div>
+                            <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTabCommon" tabName="TransferTax" tabUrl="SearchTransferTax"></div>
                             </div>
                         </div>
                     </div>
