--- a/home.html
+++ b/home.html
@@ -377,6 +377,7 @@
   <script src="js/modules/AccountingUI.js"></script>
   <script src="js/modules/GovernmentUI.js"></script>
   <script src="js/modules/HospitalUI.js"></script>
+  <script src="js/modules/HospitalUI.js"></script>
 
   <script src="js/modules/submodules/PersonTaskUI.js"></script>
   <script src="js/modules/submodules/EmployeeTimeSheetUI.js"></script>
@@ -393,6 +394,11 @@
   <script src="js/modules/submodules/GovernmentAccountingUI.js"></script>
   <script src="js/modules/submodules/GovernmentReportsUI.js"></script>
   <script src="js/modules/submodules/GovernmentPrintingUI.js"></script>
+  <script src="js/modules/submodules/RealEstateTaxUI.js"></script>
+  <script src="js/modules/submodules/RealEstateTransferUI.js"></script>
+  <script src="js/modules/submodules/ElectricalPermitUI.js"></script>
+  <script src="js/modules/submodules/PlumbingPermitUI.js"></script>
+  <script src="js/modules/submodules/BuildingPermitUI.js"></script>
 
   <script src="js/saas/ReviewCenter.js"></script>
   
